
  * Refersh process list automatically and position the originally selected process(LP: #1261802).
  * Adjust the structure of QML project.
  * Add CD-ROM, Audio Card and WLan information.
  * Kill root process.
  * Add Device driver basic information.
  * Use new translation content.
  * Display the preview picture when click the name on the BootAnimation page.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 27 Dec 2013 16:01:22 +0800

youker-assistant (0.3.1-0ubuntu1) trusty; urgency=low

  * Overide the Font Dialog with KFontDialog Class.
  * Add detailed information of Network Card, HardDisk and Graphics Card.
  * Add Separator.qml.
  * Change Logo and add InfoGroup.js.
  * Access weather data with python threading.
  * Change /usr/share/youker-assistant-daemon to /var/lib/youker-assistant-daemon.
  * Change UbuntuKylin to Ubuntu Kylin.
  * Modify calculation method of system memory allocation(LP: #1242579).
  * Refresh net speed every second to resolve the wrong displaying net flow(LP: #1237891).
  * Modify LargestFile.qml and One Key cleaner.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 17 Dec 2013 15:12:07 +0800

youker-assistant (0.2.4-0ubuntu1) saucy; urgency=low

  * Optimize button events of AuthDialog(LP: #1256183).
  * Fixed Dialog's movement and hazing when click a button(LP: #1255550).
  * Change some pictures of computer's detailed information.
  * All system configuration saved with QSetting.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 05 Dec 2013 14:26:53 +0800

youker-assistant (0.2.3-0ubuntu1) saucy; urgency=low

  * Add processmanager.
  * Add Google Chromium Cookies cleaner.
  * Change Chinese to English add add translation.
  * Adjust components space after it added translation.
  * Solve the segmentation fault when users cancel the previous Fcitx configuration(LP: #1252595).
  * Save and restore the default system configuration with QSetting.
  * Clear Cookies of Chromium(LP: #1224871).