@@ -1,1 +1,1 @@
-UK_ACTION_YOUKER = 'com.ubuntukylin.youker'
+UK_ACTION_YOUKER = 'com.ubuntukylin.youker.action'
