@@ -7,8 +7,9 @@ youker-assistant (0.3.2-0ubuntu1) trusty; urgency=low
   * Add Device driver basic information.
   * Use new translation content.
   * Display the preview picture when click the name on the BootAnimation page.
+  * Rename dbus and add backends/youker-assistant-daemon/install.sh.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 27 Dec 2013 16:01:22 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 07 Jan 2014 15:57:12 +0800
 
 youker-assistant (0.3.1-0ubuntu1) trusty; urgency=low
 
